[package]
authors = ["Rory McCann <rory@technomancy.org>"]
description = "Work with Slippy map tile names, found in OpenStreetMap"
keywords = ["openstreetmap", "osm"]
license = "GPL-3.0"
name = "slippy-map-tiles"
repository = "https://github.com/rory/slippy-map-tiles-rs"
version = "0.15.0"

[dependencies]
lazy_static = "1.4.0"
regex = "1.3"
world_image_file = { version = "0.1", optional = true }

[features]
world_file = ["world_image_file"]
